add mentions legales to yml file

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,5 +3,6 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/poseursdavenir/public_html
     - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp mentions_legales.html $DEPLOYPATH
     - /bin/cp style.css $DEPLOYPATH
     - /bin/cp -R images $DEPLOYPATH
