add /bin back to commands

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,7 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/poseursdavenir/public_html
-    - cp index.html $DEPLOYPATH
-    - cp mentions_legales.html $DEPLOYPATH
-    - cp style.css $DEPLOYPATH
-    - cp -R images $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp mentions_legales.html $DEPLOYPATH
+    - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -R images $DEPLOYPATH
